turtlebot3_ws/log/build_2022-09-05_21-20-49/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 183
    print "C"
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("C")?

